lab5/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator-service
  namespace: lab5
  labels:
    app: calculator
spec:
  selector:
    app: calculator
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  type: LoadBalancer
