lab5/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calculator-ingress
  namespace: lab5
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: calculator.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: calculator-service
            port:
              number: 80
